# hot-cross-buns

./: .clang-format  .clang-tidy  .env.example  .gitignore  AGENTS.md  ALL-WORKING-LIMITATIONS-TO-REMEDY-MEGALOG.md  API_CONVENTIONS.md  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  COMPLETED.md  CONTRIBUTING.md  HOT-CROSS-BUNS-LINUX.md  HOT-CROSS-BUNS-WINDOWS.md  ISSUES.md  Makefile  README.md  SECURITY.md  SUPPORT.md  TODO-TONIGHT.md  TODO.md  URGENT-TODO-FOR-OPTIMISAATION.md  URGENT-TODO.md  docker-compose.yml  electron-builder.yml  electron.vite.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  prompts-to-run-22-may.md  prompts-to-run-23-may.md  prompts-to-run-july-2026-to-port-to-diff-devices.md  stuff-missing-from-hcb2-to-add-july-2026.md  tailwind.config.ts  temporary-mcp-concerns  to.do.md  todo-for-hcb2-july-2026.md  todo.md  tsconfig.browser-extension.json  (+3 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: db.rs  error.rs  lib.rs  main.rs  state.rs
melon-pan/: Cargo.toml  README.md
melon-pan/.build/xcode-derived/: info.plist
melon-pan/.build/xcode-derived/ModuleCache.noindex/: Accessibility-F6HG41M5LHGRZ0M3RLYUKT4C.pcm  ApplicationServices-207J381N9F6R01FDU5PF3T7ZA.pcm  CFNetwork-E5YKG8208IYCEFY2GP4ZCZT2S.pcm  CUPS-4SKWT3GDD9JB4FW0LLYFHS7D0.pcm  ColorSync-AR4TS0E4487LV52N2G740C58P.pcm  CoreData-EAMFRLKZC6OLM49HM5BQEQDSU.pcm  CoreFoundation-2P4CCBJAZU2B3IJKS073NLZW9.pcm  CoreGraphics-S2CL4IO8RZA0CQIZCLRY2AJ6.pcm  CoreImage-3DWR5FJU56VB6U0C8NYWSIA8N.pcm  CoreSpotlight-1Q9PJX8204J2BRMXEVFP98AG7.pcm  CoreText-2NYVNZYFG53HHBDLUKPZC8RFD.pcm  CoreTransferable-4LFZCMDHUA3LFT34GZNMSPA2D.pcm  CoreVideo-481W2M5GAB5W4XOLBJE990YB8.pcm  DataDetection-34U0VW0CBW12J1Z253JFI060U.pcm  DiskArbitration-1P2X57RZZP2QA9MQIRF2SJ4JZ.pcm  Dispatch-ABNQ9ZSH9OKB07UV7FUAADW7I.pcm  IOSurface-BK350FKESV6C1ETTWSVMJFMTI.pcm  ImageIO-CMC0PZ4DZ8E18NIRO3IHE7F9S.pcm  MachO-RSJHKC5XAHRCMBMF3PM2H0TD.pcm  Metal-6VU1ESRBYUPDI81GEZPM40P9F.pcm  Network-6DVMCWY758EY6UJKCKPD233EC.pcm  OSLog-29W9JQQZ5M003T4J6OJYW80EN.pcm  ObjectiveC-DBC52MM8MGV7WZJY1YPFGXZYN.pcm  OpenGL-9SL690D8RVA5EMYL113ZSGPJF.pcm  QuartzCore-A6FTQUMZPPAGA39M5MWONGD0I.pcm  Security-6Z9HD9N7T5H1CAUCQXMSFITSH.pcm  ServiceManagement-OW8ZIILZV1PY9PE8FFYRW9O0.pcm  Session.modulevalidation  Spatial-3GQBSUE7C1G0TP5FUO0S7IW4.pcm  SwiftUI-5IFC3RAOYCBJC89CR8JN4RCGH.pcm  SwiftUICore-5OO954OK2A27P516WIACM3INF.pcm  Symbols-4PYBAYUMTSINB4VGCYB6GR0R4.pcm  UniformTypeIdentifiers-AHB5G7WUST49LNT0US3EOU5LG.pcm  UserNotifications-DPMN2IHEDQAMLBUXV8ST29AJF.pcm  XPC-5UDO49ASKJ9V2JHK59W675M47.pcm  _Builtin_intrinsics-CYU9BH0KO1AJNEQV9I4RZ3ZM6.pcm  _Builtin_inttypes-YEF84SN8CJABL45KBEKJ1H6S.pcm  _Builtin_limits-ACCPKWPBY1HU7K1E55GEIBTX.pcm  _Builtin_stdatomic-5VZCI3ED2T39OG0HDB5G0EGI3.pcm  _Builtin_stdint-8KJAL5QDZAC29TF3RTFB0XOG0.pcm  (+13 more)
melon-pan/.codex/environments/: environment.toml
melon-pan/.github/workflows/: ci.yml
melon-pan/apps/macos/melon-pan-mac/: .gitignore  README.md  project.yml
melon-pan/crates/melon-pan-core/: Cargo.toml
melon-pan/crates/melon-pan-core/src/: auth.rs  drive.rs  drive_comments.rs  drive_json.rs  (+20 more)
melon-pan/crates/melon-pan-mac-ffi/: Cargo.toml
melon-pan/crates/melon-pan-mac-runtime/: Cargo.toml
melon-pan/crates/melon-pan-net/: Cargo.toml
melon-pan/crates/melon-pan-runtime-shared/: Cargo.toml
melon-pan/docs/: architecture.md  distribution.md  oauth-scopes.md  siyuan-reference-notes.md  transpiler-fidelity.md  vim-parity.md
melon-pan/script/: build_and_run.sh
melon-pan/tests/fixtures/: drive-list-basic.json  google-doc-basic.json
melon-pan/tests/transpiler-corpus/: MANIFEST.sha256
native/: CMakeLists.txt
native/benchmarks/: Native15kEventPerformanceFixtureMain.cpp  NativeCommandPaletteBenchmarkMain.cpp  NativeIdleRssBenchmarkMain.cpp  NativeLaunchBenchmarkMain.cpp  NativeMediumPerformanceFixtureMain.cpp  NativePerformanceReportMain.cpp  NativeSmallPerformanceFixtureMain.cpp
native/qml/: AccessibleButton.qml  AccessibleNavigationButton.qml  Main.qml  NavigationSidebar.qml  Theme.qml  qmldir
native/src/: main.cpp
native/src/app/: AppPaths.cpp  AppPaths.h  AppServices.cpp  AppServices.h  ApplicationLifecycle.h
native/src/core/: AppError.h  Cancellation.h  Clock.h  CommandRegistryModel.cpp  CommandRegistryModel.h  DiagnosticsJsonExporter.cpp  DiagnosticsJsonExporter.h  DiagnosticsSnapshot.cpp  DiagnosticsSnapshot.h  FeatureCapabilityRegistry.h  FilePath.h  GoogleApiError.cpp  GoogleApiError.h  NativeCapabilityReport.cpp  NativeCapabilityReport.h  NativeCommandPaletteBenchmark.cpp  NativeCommandPaletteBenchmark.h  NativeIdleRssBenchmark.cpp  NativeIdleRssBenchmark.h  NativeLaunchBenchmark.cpp  NativeLaunchBenchmark.h  NativePerformanceFixture.cpp  NativePerformanceFixture.h  NativePerformanceReport.cpp  NativePerformanceReport.h  NativeProcessMemory.cpp  NativeProcessMemory.h  PkceAuthorization.cpp  PkceAuthorization.h  SecretRedactor.cpp  SecretRedactor.h  SettingsRegistry.h  StartupTimingTracker.cpp  StartupTimingTracker.h  StructuredLogger.cpp  StructuredLogger.h  SyncBackoffPolicy.cpp  SyncBackoffPolicy.h  UiTransitionTimingTracker.cpp  UiTransitionTimingTracker.h
native/tests/: AppPathsTest.cpp  ApplicationLifecycleTest.cpp  CancellationTest.cpp  ClockTest.cpp  CommandRegistryModelTest.cpp  DiagnosticsJsonExporterTest.cpp  DiagnosticsSnapshotTest.cpp  FeatureCapabilityRegistryTest.cpp  FilePathTest.cpp  GoogleApiErrorTest.cpp  NativeCapabilityReportTest.cpp  NativeCommandPaletteBenchmarkTest.cpp  NativeIdleRssBenchmarkTest.cpp  NativeLaunchBenchmarkTest.cpp  NativePerformanceFixtureTest.cpp  NativePerformanceReportTest.cpp  NativeQmlShellSmokeTest.cpp  PkceAuthorizationTest.cpp  QmlTestMain.cpp  SecretRedactorTest.cpp  SettingsRegistryTest.cpp  StartupTimingTrackerTest.cpp  StructuredLoggerTest.cpp  SyncBackoffPolicyTest.cpp  TestApplicationBootstrapTest.cpp  UiTransitionTimingTrackerTest.cpp
native/tests/qml/: tst_Main.qml
native/tests/support/: TestApplicationBootstrap.h
(+2267 files in other folders)
