[workspace]
members = [
    "crates/melon-pan-core",
    "crates/melon-pan-net",
    "crates/melon-pan-runtime-shared",
    "crates/melon-pan-mac-runtime",
    "crates/melon-pan-mac-ffi",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gongahkia/melon-pan"
rust-version = "1.80"
