[package]
name = "tickclone"
version = "0.1.0"
description = "TickClone - Local-first desktop task manager"
authors = ["gongahkia"]
edition = "2021"

[lib]
name = "tickclone_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v7"] }
