[package]
name = "hot-cross-buns"
version = "0.1.0"
description = "Hot Cross Buns - Local-first desktop task manager"
authors = ["gongahkia"]
edition = "2021"

[lib]
name = "hot_cross_buns_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v7"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-global-shortcut = "2"

[dev-dependencies]
tempfile = "3"
